syntax = "proto3";

option go_package = "github.com/RomaBiliak/generate-grpc;grpc_item";

service CRUD {
  rpc GetItem (ItemId) returns (Item) {}
  rpc DeleteItem (ItemId) returns (ItemId) {}
  rpc CreateItem (Item) returns (ItemId) {}
  rpc UpdateItem (Item) returns (ItemId) {}

  rpc GetItems (Void) returns (Items) {}
}

message Void {}

message ItemId{
  int32 Id = 1;
}

message Item {
  int32 Id = 1;
  string name = 2;
  string value = 3;
}

message Items {
  repeated Item aliases = 1;
}